--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New MVP</title>
+  <title>New/different MVP for helping people at Codesmith learn</title>
 </head>
 <body>
   <li>Unit 1</li>
